--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -6,6 +6,16 @@
 body {
     background-color: #f59649;
 }
+.foto-cabecalho{
+    position: absolute;
+    width: 150px;
+    margin-top: -15px;
+    margin-left: 0px;
+}
+h1{
+    position: relative;
+    margin-left: 90px;
+}
 
 .content {
     width: 100vw;
