--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -81,22 +81,22 @@
 .pokemon {
     display: flex;
     flex-direction: column;
-    margin: .5rem;
+    margin: 0.5rem;
     padding: 1rem;
     border-radius: 1rem;
 }
 
 .pokemon .number {
     color: #000;
-    opacity: .3;
+    opacity: 0.3;
     text-align: right;
-    font-size: .625rem;
+    font-size: 0.625rem;
 }
 
 .pokemon .name {
     text-transform: capitalize;
     color: #fff;
-    margin-bottom: .25rem;
+    margin-bottom: 0.25rem;
 }
 
 .pokemon .detail {
@@ -114,9 +114,9 @@
 
 .pokemon .detail .types .type {
     color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
+    padding: 0.25rem 0.5rem;
+    margin: 0.25rem 0;
+    font-size: 0.625rem;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
@@ -125,6 +125,24 @@
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
+}
+
+.pokemon .details_button {
+    align-self: center;
+    width: fit-content;
+    padding: 0.2rem 0.5rem;
+    font-size: 1rem;
+    color: white;
+    border: 2px solid white;
+    background-color: transparent;
+    border-radius: 0.4rem;
+    margin-top: 15px;
+    font-weight: 300;
+}
+
+.pokemon .details_button:hover {
+    border-color: black;
+    color: #000;
 }
 
 .pagination {
@@ -137,9 +155,9 @@
 }
 
 .pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
+    padding: 0.25rem 0.5rem;
+    margin: 0.25rem 0;
+    font-size: 0.625rem;
     color: #fff;
     background-color: #6c79db;
     border: none;
