--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -163,9 +163,33 @@
     border: none;
     border-radius: 1rem;
 }
+.pokemon-statistcs {
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.2);
+    margin-top: 20px;
+}
+.pokemon-statistcs h2 {
+    font-size: 1.5rem;
+    text-align: center;
+    color: white;
+    font-weight: 300;
+}
 
+.pokemon-statistcs .stats {
+    display: grid;
+    grid-template-columns: 1fr;
+    list-style: none;
+    text-align: left;
+}
+.pokemon-statistcs .stats {
+    text-transform: capitalize;
+    font-size: 0.9rem;
+    color: white;
+    font-weight: 300;
+}
 @media screen and (min-width: 380px) {
-    .pokemons {
+    .pokemons,
+    .pokemon-statistcs .stats {
         grid-template-columns: 1fr 1fr;
     }
 }
