--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,9 +1,9 @@
-.pokemons {
+.pokemons{
     display: grid;
-    grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
+    grid-template-rows: minmax(1rem, auto);
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 .normal {
@@ -78,88 +78,194 @@
     background-color: #f9aec7;
 }
 
-.pokemon {
+li{
+    list-style: none;
+}
+
+ol{
+    padding: 0;
+}
+
+ol.pokemons li.pokemon{
     display: flex;
     flex-direction: column;
     margin: .5rem;
     padding: 1rem;
+    color: #ffff;
     border-radius: 1rem;
+    cursor: pointer;
 }
 
-.pokemon .number {
-    color: #000;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
-}
-
-.pokemon .name {
-    text-transform: capitalize;
-    color: #fff;
-    margin-bottom: .25rem;
-}
-
-.pokemon .detail {
+ol.pokemons .detail{
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
 }
 
-.pokemon .detail .types {
+ol.pokemons li.pokemon img{
+    max-width: 10rem;
+    height: 10rem;
+    align-self: flex-end;
+}
+
+ol.pokemons ol.types{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-.pokemon .detail .types .type {
-    color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    border-radius: 1rem;
-    filter: brightness(1.1);
     text-align: center;
+    font-weight: bold;
 }
 
-.pokemon .detail img {
-    max-width: 100%;
-    height: 70px;
+ol.pokemons ol.types li{
+    margin: .3rem;
+    padding: .5rem .75rem;
+    border-radius: 1rem;
+    font-size: 1.2rem;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 24px;
 }
 
 .pagination {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 100%;
     padding: 1rem;
 }
 
 .pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
+    margin: .3rem;
+    padding: .5rem .75rem;
+    border-radius: 1rem;
+    font-size: 1.6rem;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 24px;
+    color: #ffff;
+    cursor: pointer;
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
 }
 
-@media screen and (min-width: 380px) {
-    .pokemons {
+/* Modal */
+
+.modal-wrapper{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    
+
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    color: #ffff;
+    background-color: rgba(0, 0, 0, 0.7);
+
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal-wrapper.open{
+    opacity: 1;
+    visibility: visible;
+}
+
+
+.modal-card{
+    width: 25%;
+    min-width: 19rem;
+    max-width: 50rem;
+    box-shadow: 0 .2rem .4rem rgb(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    border-radius: .8rem .8rem
+}
+
+.modal-card ol.types li{
+    margin: .3rem;
+    padding: .5rem .75rem;
+    border-radius: 1rem;
+    font-size: 1.2rem;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 24px;
+}
+
+.infos{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 2rem;
+    border-radius: .8rem;
+}
+
+.card-title{
+    display: flex;
+    margin: 2rem 0 0 0 ;
+    justify-content: space-between;
+}
+
+.abilities{
+    align-self: flex-start;
+    width: 100%;
+    border-radius: .8rem;
+    padding: .5rem;
+    color: black;
+    background-color: #ffffff;
+}
+
+.abilities .title-section{
+    display: block;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-radius: 1rem;
+    color : white;
+    padding: .5rem;
+}
+
+.abilities li{
+    margin: 1rem;
+    padding: .5rem .75rem;
+    border-radius: 1rem;
+    font-size: 1.6rem;
+    color: #ffffff;
+    font-weight: bold;
+    text-transform: capitalize;
+}
+
+.close-modal-btn{
+    background: transparent;
+    color: #ffff;
+    cursor: pointer;
+    border: none;
+    text-align: end;
+    padding: 0.2rem;
+}
+
+@media screen and (min-width: 992px){
+    .content{
+        max-width: 992px;
+        margin: 0 auto;
+        border-radius: 1rem;
+    }
+}
+
+@media screen and (min-width: 380px){
+    ol.pokemons{
         grid-template-columns: 1fr 1fr;
     }
 }
 
-@media screen and (min-width: 576px) {
-    .pokemons {
+
+@media screen and (min-width: 576px){
+    ol.pokemons{
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
-@media screen and (min-width: 992px) {
-    .pokemons {
+@media screen and (min-width: 992px){
+    ol.pokemons{
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
