Set theme to dark

--- a/style/global.css
+++ b/style/global.css
@@ -4,14 +4,21 @@
 }
 
 body {
-  background-color: #f6f8fc;
+  background-color: #121212;
+}
+
+h1 {
+  color: white;
+}
+.author {
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .content {
   width: 100vw;
   height: 100vh;
   padding: 1rem;
-  background-color: #fff;
+  background-color: ##121212;
 }
 
 @media screen and (min-width: 992px) {
