--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -6,98 +6,85 @@
     list-style: none;
 }
 
-.normal {
-    background-color: #a6a877;
-}
+/* Cores para os tipos de Pokémon */
+.normal { background-color: #a6a877; }
+.grass { background-color: #77c850; }
+.fire { background-color: #ee7f30; }
+.water { background-color: #678fee; }
+.electric { background-color: #f7cf2e; }
+.ice { background-color: #98d5d7; }
+.ground { background-color: #dfbf69; }
+.flying { background-color: #a98ff0; }
+.poison { background-color: #a040a0; }
+.fighting { background-color: #bf3029; }
+.psychic { background-color: #f65687; }
+.dark { background-color: #725847; }
+.rock { background-color: #b8a137; }
+.bug { background-color: #a8b720; }
+.ghost { background-color: #6e5896; }
+.steel { background-color: #b9b7cf; }
+.dragon { background-color: #6f38f6; }
+.fairy { background-color: #f9aec7; }
 
-.grass {
-    background-color: #77c850;
-}
 
-.fire {
-    background-color: #ee7f30;
-}
-
-.water {
-    background-color: #678fee;
-}
-
-.electric {
-    background-color: #f7cf2e;
-}
-
-.ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
-}
-
-.fighting {
-    background-color: #bf3029;
-}
-
-.psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
-}
-
-.bug {
-    background-color: #a8b720;
-}
-
-.ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
-.dragon {
-    background-color: #6f38f6;
-}
-
-.fairy {
-    background-color: #f9aec7;
+.titlePokemon {
+    text-align: center;
+    font-family: 'Arial', sans-serif;
+    font-size: 2.5rem;
+    color: #e2123b;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .pokemon {
     display: flex;
     flex-direction: column;
-    margin: .5rem;
+    margin: 0.5rem;
     padding: 1rem;
     border-radius: 1rem;
 }
 
 .pokemon .number {
+    grid-column: span 2;
     color: #000;
-    opacity: .3;
+    opacity: 0.3;
     text-align: right;
-    font-size: .625rem;
+    font-size: 0.625rem;
 }
 
-.pokemon .name {
-    text-transform: capitalize;
+.info-button {
+    background-color: #2196F3; /* Cor de fundo do botão */
     color: #fff;
-    margin-bottom: .25rem;
+    border: none;
+    border-radius: 70%;
+    cursor: pointer;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s ease;
 }
+
+.info-button:hover {
+    background-color: #1565C0; /* Cor de fundo do botão ao passar o mouse */
+}
+
+
+
+.pokemon .name,
+.pokemon .abilities,
+.pokemon .base_experience,
+.pokemon .height,
+.pokemon .weight {
+    text-transform: capitalize;
+    margin-bottom: 0.25rem;
+}
+
+.pokemon .name { color: #2a2a2a; }
+.pokemon .abilities { color: #e53935; }
+.pokemon .base_experience { color: #8d6e63; }
+.pokemon .height { color: #3e2723; }
+.pokemon .weight { color: #2e7d32; }
+
 
 .pokemon .detail {
     display: flex;
@@ -106,44 +93,120 @@
     justify-content: space-between;
 }
 
-.pokemon .detail .types {
+.pokemons-div .pokemons-div-card .pokemon .detail .types {
     padding: 0;
     margin: 0;
     list-style: none;
 }
 
-.pokemon .detail .types .type {
+.pokemons-div .pokemons-div-card .pokemon .detail .types .type {
     color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    border-radius: 1rem;
-    filter: brightness(1.1);
+    padding: 0.25rem 0.75rem; /* Ajustei o preenchimento para um visual mais equilibrado */
+    margin: 0.25rem 0;
+    font-size: 0.75rem; /* Aumentei o tamanho da fonte para melhor legibilidade */
+    border-radius: 0.5rem; /* Arredondei as bordas utilizando rem */
     text-align: center;
+    position: relative;
+    overflow: hidden;
 }
+
+.pokemons-div .pokemons-div-card .pokemon .detail .types .type {
+    position: relative;
+    text-decoration: none;
+    padding: 8px 16px;
+    color: white;
+    font-weight: 500;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 999px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    user-select: none;
+  }
+  .pokemons-div .pokemons-div-card .pokemon .detail .types .type span {
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: -12px;
+    right: -2px;
+    transform: rotate(-20deg);
+    filter: blur(0.5px);
+  }
+  .pokemons-div .pokemons-div-card .pokemon .detail .types .type span:before, .pokemons-div .pokemons-div-card .pokemon .detail .types .type span:after {
+    content: "";
+    position: absolute;
+  }
+  .pokemons-div .pokemons-div-card .pokemon .detail .types .type span:before {
+    width: 1px;
+    height: 100%;
+    left: 12px;
+    background: linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.7), transparent);
+  }
+  .pokemons-div .pokemons-div-card .pokemon .detail .types .type span:after {
+    width: 100%;
+    height: 1px;
+    top: 12px;
+    background: linear-gradient(to left, transparent, rgba(255, 255, 255, 0.7), transparent);
+  }
+  .pokemons-div .pokemons-div-card .pokemon .detail .types .type:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    background: linear-gradient(30deg, #7f6dc5 60%, white);
+    top: -1px;
+    right: -1px;
+    bottom: -1px;
+    left: -1px;
+    border-radius: 999px;
+  }
 
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
 }
 
+
 .pagination {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    padding: 1rem;
+    margin-top: 1.25rem;
 }
 
 .pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
+    padding: 0.625rem 1.25rem;
+    font-size: 0.875rem;
     color: #fff;
     background-color: #6c79db;
     border: none;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease; 
+}
+
+.pagination button:hover {
+    background-color: #5464b7;
+}
+
+.pokemons-div {
+    padding: .3rem;
+}
+
+.pokemons-div-card {
+    border-radius: 15px;
+    transition: all 0.5s ease;
+}
+
+.pokemons-div-card:hover {
+    transform: scale(1.1);
+    z-index: 1;
+}
+
+.pokemons-div-card img {
+    width: 35%;
+    height: auto;
+}
+
+.pokemons-div-card h3 {
+    margin-bottom: 0px;
 }
 
 @media screen and (min-width: 380px) {
@@ -152,14 +215,20 @@
     }
 }
 
-@media screen and (min-width: 576px) {
-    .pokemons {
+@media screen and (max-width: 576px) {
+    .pokemons-div-card {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 577px) and (max-width: 768px) {
+    .pokemons-div-card {
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
 @media screen and (min-width: 992px) {
     .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
