--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -78,6 +78,82 @@
     background-color: #f9aec7;
 }
 
+/* progress */
+
+.progress-normal::-webkit-progress-value {
+    background-color: #a6a877;
+}
+
+.progress-grass::-webkit-progress-value {
+    background-color: #77c850;
+}
+
+.progress-fire::-webkit-progress-value {
+    background-color: #ee7f30;
+}
+
+.progress-water::-webkit-progress-value {
+    background-color: #678fee;
+}
+
+.progress-electric::-webkit-progress-value {
+    background-color: #f7cf2e;
+}
+
+.progress-ice::-webkit-progress-value {
+    background-color: #98d5d7;
+}
+
+.progress-ground::-webkit-progress-value {
+    background-color: #dfbf69;
+}
+
+.progress-flying::-webkit-progress-value {
+    background-color: #a98ff0;
+}
+
+.progress-poison::-webkit-progress-value {
+    background-color: #a040a0;
+}
+
+.progress-fighting::-webkit-progress-value {
+    background-color: #bf3029;
+}
+
+.progress-psychic::-webkit-progress-value {
+    background-color: #f65687;
+}
+
+.progress-dark::-webkit-progress-value {
+    background-color: #725847;
+}
+
+.progress-rock::-webkit-progress-value {
+    background-color: #b8a137;
+}
+
+.progress-bug::-webkit-progress-value {
+    background-color: #a8b720;
+}
+
+.progress-ghost::-webkit-progress-value {
+    background-color: #6e5896;
+}
+
+.progress-steel::-webkit-progress-value {
+    background-color: #b9b7cf;
+}
+
+.progress-dragon::-webkit-progress-value {
+    background-color: #6f38f6;
+}
+
+.progress-fairy::-webkit-progress-value {
+    background-color: #f9aec7;
+}
+
+/* progress */
+
 .pokemon {
     display: flex;
     flex-direction: column;
