--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -77,54 +77,118 @@
 .fairy {
     background-color: #f9aec7;
 }
-
 .pokemon {
     display: flex;
     flex-direction: column;
-    margin: .5rem;
+    align-items: center;
+    justify-content: space-between;
     padding: 1rem;
+    margin: 0.5rem;
     border-radius: 1rem;
 }
 
 .pokemon .number {
+    font-size: 1.25rem;
+    text-align: left;
+    margin-right: 1rem;
     color: #000;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
+    opacity: .7;
+    flex-shrink: 0;
+    
+}
+.pokemon .number-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.pokemon .info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .pokemon .name {
+    font-size: 1.5rem;
     text-transform: capitalize;
     color: #fff;
     margin-bottom: .25rem;
 }
 
-.pokemon .detail {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.pokemon .detail .types {
+.pokemon .types {
+    font-size: 1.25rem;
+    list-style: none;
     padding: 0;
     margin: 0;
-    list-style: none;
 }
 
-.pokemon .detail .types .type {
+.pokemon .types .type {
+    display: inline-block;
+    font-size: 1rem;
     color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
 }
 
-.pokemon .detail img {
-    max-width: 100%;
-    height: 70px;
+.pokemon .details {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.pokemon .image {
+    margin-right: 1rem;
+}
+
+.pokemon .image img {
+    max-width: 200px;
+    border-radius: 5px;
+}
+
+.pokemon .stats {
+    text-align: left;
+    flex-grow: 1;
+}
+
+.pokemon .stats h3 {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+.pokemon .stats p {
+    font-size: 0.875rem;
+    margin: 0.25rem 0;
+    color: #555;
+    white-space: nowrap;
+    overflow-x: auto;
+}
+
+.pokemon .card {
+    background-color: #ffffff;
+    opacity: .8;
+    border-radius: 1rem;
+    padding: 0.5rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.pokemon .card h3 {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+.pokemon .card .stats {
+    text-align: left;
+}
+
+.pokemon .card .stats p {
+    font-size: 0.875rem;
+    margin: 0.25rem 0;
+    color: #000000;
+    white-space: nowrap;
+    overflow-x: auto;
 }
 
 .pagination {
