--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,165 +1,157 @@
-.pokemons {
+
+.pokemons{
     display: grid;
     grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
     list-style: none;
+    padding: 0;
+    margin: 0;
+   }
+   
+   .pokemon .number{
+       text-align: right;
+      color: #1a705e;
+      font-weight: bold;
+      font-size: .625rem;
+   }
+   .pokemon .name{
+       text-transform: capitalize;
+       margin-bottom: 0;
+   }
+   .pokemon .types{
+       padding: 0;
+       margin: 0;
+       list-style: none;
+   }
+   .pokemon .detail{
+       display: flex;
+       flex-direction: row;
+       align-items: center;    
+       justify-content: space-between;
+   }
+   
+   .pokemon{
+   margin: .5rem;
+   padding: 1rem;
+   background-color: #49d8b8;
+   color: white;
+   border-radius: 1rem;
+   display: flex;
+   flex-direction: column;
+   }
+   
+   .pokemon .detail img{
+       align-self: flex-end;
+       max-width: 100%;
+       height: 70px;
+       overflow: hidden;
+   }
+   .pokemon .detail .types .type{
+       filter:brightness(1.1);
+       padding: .25rem .5rem;
+       border-radius: .5rem;
+       margin: .25rem 0;
+       font-size: .825rem;
+   }
+
+   .pagination {
+       
+       display: flex;
+       flex-direction: row;
+       justify-content: center;
+       align-items: center;
+       width: 100%;
+       padding: 1rem;
+   }
+
+   .pagination button{
+       margin: .5rem;
+       padding: .5rem .825rem;
+       background-color: #6c79db;
+       color: white;
+       border: none;
+       border-radius: 1rem;
+   }
+   .pagination button:hover{
+    animation: ease-in-out;
+    background-color: #4a55a7;
+    animation-delay: 1s;
+    
 }
+
+    #loadPrev{
+        display: none;
+    }
+
 
 .normal {
-    background-color: #a6a877;
-}
-
-.grass {
-    background-color: #77c850;
-}
-
+    background-color:#A8A77A;
+} 
 .fire {
-    background-color: #ee7f30;
-}
-
+    background-color:#EE8130;
+} 
 .water {
-    background-color: #678fee;
-}
-
+    background-color:#6390F0;
+} 
 .electric {
-    background-color: #f7cf2e;
-}
-
+    background-color:#F7D02C;
+} 
+.grass {
+    background-color:#7AC74C;
+} 
 .ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
-}
-
+    background-color:#96D9D6;
+} 
 .fighting {
-    background-color: #bf3029;
-}
-
+    background-color:#C22E28;
+} 
+.poison {
+    background-color:#A33EA1;
+} 
+.ground {
+    background-color:#E2BF65;
+} 
+.flying {
+    background-color:#A98FF3;
+} 
 .psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
-}
-
+    background-color:#F95587;
+} 
 .bug {
-    background-color: #a8b720;
-}
-
+    background-color:#A6B91A;
+} 
+.rock {
+    background-color:#B6A136;
+} 
 .ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
+    background-color:#735797;
+} 
 .dragon {
-    background-color: #6f38f6;
-}
-
+    background-color:#6F35FC;
+} 
+.dark {
+    background-color:#705746;
+} 
+.steel {
+    background-color:#B7B7CE;
+} 
 .fairy {
-    background-color: #f9aec7;
-}
+    background-color:#D685AD;
+} 
 
-.pokemon {
-    display: flex;
-    flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
-    border-radius: 1rem;
-}
 
-.pokemon .number {
-    color: #000;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
-}
-
-.pokemon .name {
-    text-transform: capitalize;
-    color: #fff;
-    margin-bottom: .25rem;
-}
-
-.pokemon .detail {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.pokemon .detail .types {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-.pokemon .detail .types .type {
-    color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    border-radius: 1rem;
-    filter: brightness(1.1);
-    text-align: center;
-}
-
-.pokemon .detail img {
-    max-width: 100%;
-    height: 70px;
-}
-
-.pagination {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 1rem;
-}
-
-.pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
-    background-color: #6c79db;
-    border: none;
-    border-radius: 1rem;
-}
-
-@media screen and (min-width: 380px) {
-    .pokemons {
+   
+   @media screen and (min-width: 390px) {
+    .pokemons{
         grid-template-columns: 1fr 1fr;
+        }
     }
-}
-
-@media screen and (min-width: 576px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr;
+    @media screen and (min-width: 768px) {
+        .pokemons{
+            grid-template-columns: 1fr 1fr 1fr;
+        }
     }
-}
-
-@media screen and (min-width: 992px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+    @media screen and (min-width: 992px) {
+        .pokemons{
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+        }
     }
-}
