--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -127,6 +127,58 @@
     height: 70px;
 }
 
+.banner {
+    min-height: 10vh;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 1rem;
+}
+
+.banner img {
+    max-width: 100%;
+    height: 350px;
+}
+
+.detail-title {
+    text-align: center;
+    text-transform: capitalize;
+    font-size: 50px;
+}
+
+.detail-number {
+
+    /* color: #000; */
+    opacity: .3;
+    text-align: right;
+    font-size: 1rem;
+
+    background-color: rgb(97, 89, 89);
+    color: white;
+    padding: 10px;
+    border-radius: 15px;
+}
+
+#myChart{
+    max-width: 100%;
+    height: 350px;
+}
+
+.caract {
+    padding: .25rem .5rem;
+    margin: 0;
+    list-style: none;
+
+    opacity: .3;
+    background-color: rgb(97, 89, 89);
+    color: white;
+    padding: 10px;
+    border-radius: 15px;
+}
+
 .pagination {
     display: flex;
     flex-direction: row;
