--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,14 +4,30 @@
 }
 
 body {
-    background-color: #f6f8fc;
+    background-color: #e85757;
+}
+h1{
+    color: aliceblue;
 }
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: #e85757;
+}
+#pokemonDialog{
+    animation: animatezoom 0.6s;
+    box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2), 0 4px 20px 0 rgba(0,0,0,0.19);
+}
+
+@keyframes animatezoom{
+    0%{
+        transform: scale(0);
+    }
+    100%{
+        transform: scale(1);
+    }
 }
 
 @media screen and (min-width: 992px) {
