--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -5,6 +5,10 @@
     padding: 0;
     list-style: none;
 }
+.headerPokemon{
+    display: flex;
+    justify-content: space-between;
+}
 
 .normal {
     background-color: #a6a877;
@@ -145,6 +149,29 @@
     border: none;
     border-radius: 1rem;
 }
+
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  .navbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .navbar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .content {
+    padding: 20px;
+  }
 
 @media screen and (min-width: 380px) {
     .pokemons {
