--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -84,6 +84,7 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    box-shadow: .313rem 0.313rem 0.313rem 0rem rgba(0,0,0,0.1)
 }
 
 .pokemon .number {
@@ -144,6 +145,71 @@
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+}
+
+#card {
+    /* display: none; */
+    margin: .5rem;
+    background-image: url() ;
+}
+
+.cardStats {
+    display: grid;
+    color: #fff;
+    border-radius: 1rem;
+    list-style: none;
+}
+
+.cardStats h2 {
+    text-transform: capitalize;
+    margin: .5rem;
+
+}
+
+.cardStats ul {
+    margin: .25rem;
+    padding: .25rem;
+}
+
+.cardStats li, p {
+    font-size: .600rem;
+    text-align: center;
+    margin: 0;
+}
+
+.cardStats img {
+    margin: auto;
+    height: 100px;
+}
+
+.cardStats .info {
+    filter: brightness(1.1);
+    text-align: center;
+    font-weight: 700;
+    display: inline-block;
+    text-align: center;
+    font-size: .825rem;
+    width: 100%;
+    margin: .25rem;
+    padding: .25rem; 
+    border-radius: 1rem;
+    box-shadow: .313rem 0.313rem 0.313rem 0rem rgba(0,0,0,0.1)
+}
+
+.cardStats .title {
+    font-weight: 500;
+    display: inline-block;
+    text-align: left;
+    width: 60%;
+
+}
+
+.cardStats .value {
+    font-weight: 300;
+    display: inline-block;
+    text-align: right;
+    width: 40%;
+    
 }
 
 @media screen and (min-width: 380px) {
