--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -136,7 +136,16 @@
     padding: 1rem;
 }
 
-.pagination button {
+.pagination button  {
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    color: #fff;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+}
+.detailsButton{
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
