--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,24 +1,137 @@
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto','sans-serif';
     box-sizing: border-box;
 }
 
 body {
-    background-color: #f6f8fc;
+    background-color: #ffffff;
 }
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
+    background-color: rgb(198, 255, 212);
+}
+
+.pokemons {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.pokemon {
+    display: flex;
+    flex-direction: column;
+    margin: 0.5rem;
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
+.pokemon-aba {
     background-color: #fff;
 }
 
-@media screen and (min-width: 992px) {
-    .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
-    }
+.pokemon .number {
+    color: black;
+    opacity: 0.6;
+    text-align: right;
+    font-size: 0.625rem;
+}
+
+.pokemon .name {
+    text-transform: capitalize;
+    text-align: center;
+    color: #ffffff;
+    background-color: rgb(230, 47, 47);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    margin-bottom: 0.25rem;
+    border-radius: 1rem;
+    padding: .25rem 0.5rem;
+}
+
+.pokemon .name:hover {
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+    transform: scale(1.25);
+}
+
+.pokemon .detail {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pokemon .detail .types {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.pokemon .detail .types .type {
+    color: #ffffff;
+    padding: .25rem 0.5rem;
+    margin: 0.25rem 0;
+    font-size: 0.725rem;
+    border-radius: 1rem;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    filter: brightness(1.125);
+}
+
+.pokemon .detail .types .type:hover {
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+    transform: scale(1.25);
+}
+
+.pokemon .detail img {
+    max-width: 100%;
+    height: 70px;
+}
+
+.pokemon .detail img:hover {
+    transform: scale(1.25);
+}
+
+button#carregarMais {
+    background-color: #ff5733;
+    color: white;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 0.25rem;
+    border-radius: 1rem;
+    padding: .25rem 0.5rem;
+    border-radius: 1rem;
+    cursor: pointer;
+}
+
+button.stats-btn {
+    margin-top: .3rem;
+    background-color: #3498db;
+    color: #ffffff;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    font-size: 0.875rem;
+    transition: background-color 0.3s ease;
+}
+
+button.stats-btn:hover {
+    background-color: #2980b9;
+}
+
+.stat-bar {
+    height: 10px;
+    background-color: #4CAF50;
+    margin-top: 5px;
+    border-radius: 5px;
+    transition: width 0.3s ease;
+}
+
+#hpBar {
+    background-color: #e74c3c;
 }
