--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -84,11 +84,12 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    border: 1px solid black;
 }
 
 .pokemon .number {
     color: #000;
-    opacity: .3;
+    opacity: .5;
     text-align: right;
     font-size: .625rem;
 }
@@ -113,18 +114,18 @@
 }
 
 .pokemon .detail .types .type {
-    color: #fff;
+    color: #ffffff;
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
     border-radius: 1rem;
-    filter: brightness(1.1);
+    filter: brightness(1.2);
     text-align: center;
 }
 
 .pokemon .detail img {
-    max-width: 100%;
-    height: 70px;
+    max-width: 50%;
+    height: 55px;
 }
 
 .pagination {
@@ -137,9 +138,9 @@
 }
 
 .pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
+    padding: .5rem .5rem;
+    margin: .5rem 0;
+    font-size: 1rem;
     color: #fff;
     background-color: #6c79db;
     border: none;
@@ -160,6 +161,6 @@
 
 @media screen and (min-width: 992px) {
     .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
