--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -11,19 +11,19 @@
 }
 
 .grass {
-    background-color: #77c850;
+    background-color: #46d1b1;
 }
 
 .fire {
-    background-color: #ee7f30;
+    background-color: #fb6c6c;
 }
 
 .water {
-    background-color: #678fee;
+    background-color: #77befe;
 }
 
 .electric {
-    background-color: #f7cf2e;
+    background-color: #ffd970;
 }
 
 .ice {
