--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -14,6 +14,7 @@ body {
     background-color: #fff;
 }
 
+
 @media screen and (min-width: 992px) {
     .content {
         max-width: 992px;
@@ -21,4 +22,22 @@ body {
         margin: 1rem auto;
         border-radius: 1rem;
     }
+}
+#DIVpesquisa{
+    display: flex;
+    margin-bottom: .8rem;
+    align-items: center;
+}
+#pesquisa{
+    height: 28.39px;
+    
+}
+#botaopresquisar{
+    margin-left: 3px;
+    
+}
+
+#button_menu{
+    text-decoration: none;
+    color: black;
 }
