--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -18,7 +18,8 @@ h1{
 }
 #pokemonDialog{
     animation: animatezoom 0.6s;
-    box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2), 0 4px 20px 0 rgba(0,0,0,0.19);
+    border: none;
+    border-radius: 1rem;
 }
 
 @keyframes animatezoom{
