--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -6,6 +6,7 @@
     list-style: none;
 }
 
+
 .normal {
     background-color: #a6a877;
 }
@@ -82,8 +83,40 @@
     display: flex;
     flex-direction: column;
     margin: .5rem;
+    padding: 2rem;
+    border-radius: 1rem;
+    cursor: pointer;
+}
+.pokemonSelected .pokemon{
+    display: flex;
+    flex-direction: column;
+    margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    cursor: pointer;
+    width: 98%;
+    height: 50%;
+
+}
+
+.pokemon:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 1rem rgba(0, 0, 0, .2);
+    transition: all .2s ease-in-out;
+}
+@keyframes slideIn {
+    0% {
+        opacity: 0;
+        transform: translateX(100%) rotate(0deg);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0) rotate(360deg);
+    }
+}
+
+.animate-card {
+    animation: slideIn 1s ease-in-out;
 }
 
 .pokemon .number {
@@ -105,6 +138,11 @@
     align-items: center;
     justify-content: space-between;
 }
+.pokemonSelected .pokemon .detail {
+    display: block;
+    align-items: center;
+    justify-content: space-between;
+}
 
 .pokemon .detail .types {
     padding: 0;
@@ -123,8 +161,16 @@
 }
 
 .pokemon .detail img {
-    max-width: 100%;
+    width: 70px;
     height: 70px;
+
+}
+.pokemonSelected .pokemon .detail img {
+    width: 250px;
+    height: 250px;
+
+    margin: 0 auto;
+    display: block;
 }
 
 .pagination {
@@ -135,6 +181,7 @@
     width: 100%;
     padding: 1rem;
 }
+
 
 .pagination button {
     padding: .25rem .5rem;
