Several features are implemented: CSS stylizations, including nightmode; now the weight and the height of the pokemon are showing in the card

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,14 +4,14 @@
 }
 
 body {
-    background-color: #f6f8fc;
+    background-color: #40444b;
 }
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: #413333;
 }
 
 @media screen and (min-width: 992px) {
