--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -6,6 +6,12 @@
     list-style: none;
 }
 
+h1 {
+    color:#a8b720;
+    text-align: center;
+
+}
+
 .normal {
     background-color: #a6a877;
 }
@@ -84,19 +90,23 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    border-style: inset;
+    border-width: 1rem;
 }
 
 .pokemon .number {
     color: #000;
     opacity: .3;
     text-align: right;
-    font-size: .625rem;
+    font-size: 1rem;
 }
 
 .pokemon .name {
     text-transform: capitalize;
     color: #fff;
     margin-bottom: .25rem;
+    font-size: +150%;
+    text-align: right;
 }
 
 .pokemon .detail {
@@ -115,11 +125,15 @@
 .pokemon .detail .types .type {
     color: #fff;
     padding: .25rem .5rem;
-    margin: .25rem 0;
+    margin: .35rem 0;
     font-size: .625rem;
-    border-radius: 1rem;
+    border-radius: .5rem;
     filter: brightness(1.1);
     text-align: center;
+    font-size: 110%;
+    text-transform: capitalize;
+    border-style: outset;
+    border-color: white;
 }
 
 .pokemon .detail img {
@@ -144,6 +158,35 @@
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+}
+
+.weight {
+    text-align: center;
+    font-size: smaller;
+    background-color: white;
+
+    margin-right: +65%;
+    padding-top: .1rem;
+    border-style: dashed;
+    border-radius: 1rem;
+    border-color: #98d5d7;
+    padding-bottom: .1rem;
+    margin-bottom: .5rem;
+}
+
+.height {
+    text-align: center;
+    font-size: .8rem;
+    background-color: white;
+
+    margin-right: +65%;
+    padding-top: .1rem;
+    border: none;
+    border-style: dashed;
+    border-radius: 1rem;
+    border-color: #98d5d7;
+    padding-bottom: .1rem;
+    margin-bottom: .8rem;
 }
 
 @media screen and (min-width: 380px) {
