--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -144,7 +144,10 @@
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+    cursor: pointer;
 }
+
+
 
 @media screen and (min-width: 380px) {
     .pokemons {
