--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -163,3 +163,29 @@
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
+
+/* Adicione estilos para o spinner */
+.spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-left: 4px solid #3498db;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 1s linear infinite;
+    display: none;
+    /* Começa escondido */
+    position: absolute;
+    top: 69%;
+    left: 48%;
+    transform: translate(-50%, -50%);
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
