Criação da lista de Pokémons da Pokédex

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,21 +4,29 @@
 }
 
 body {
-    background-color: #f6f8fc;
+    background: linear-gradient(200deg,#f7f8fc, #e3e7f0);
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
 }
 
 .content {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     padding: 1rem;
+    margin: 0;
     background-color: #fff;
 }
 
-@media screen and (min-width: 992px) {
+
+@media screen and (min-width: 900px) {
     .content {
-        max-width: 992px;
+        max-width: 876px;
         height: auto;
         margin: 1rem auto;
         border-radius: 1rem;
     }
 }
+
+
+
