--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,81 +1,9 @@
+
 .pokemons {
+    list-style: none;
+    padding: 0;
     display: grid;
     grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.normal {
-    background-color: #a6a877;
-}
-
-.grass {
-    background-color: #77c850;
-}
-
-.fire {
-    background-color: #ee7f30;
-}
-
-.water {
-    background-color: #678fee;
-}
-
-.electric {
-    background-color: #f7cf2e;
-}
-
-.ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
-}
-
-.fighting {
-    background-color: #bf3029;
-}
-
-.psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
-}
-
-.bug {
-    background-color: #a8b720;
-}
-
-.ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
-.dragon {
-    background-color: #6f38f6;
-}
-
-.fairy {
-    background-color: #f9aec7;
 }
 
 .pokemon {
@@ -84,19 +12,12 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
-}
-
-.pokemon .number {
-    color: #000;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
+    color: #fff;
 }
 
 .pokemon .name {
-    text-transform: capitalize;
-    color: #fff;
-    margin-bottom: .25rem;
+    font-size: 1.2rem;
+    font-weight: 580;
 }
 
 .pokemon .detail {
@@ -107,43 +28,24 @@
 }
 
 .pokemon .detail .types {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+        padding: 0;
+        margin: 0;
+        list-style: none;
 }
 
 .pokemon .detail .types .type {
-    color: #fff;
+    background-color: rgba(255, 255, 255, 0.315);
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
     border-radius: 1rem;
-    filter: brightness(1.1);
     text-align: center;
+    font-size: .825rem;
 }
 
 .pokemon .detail img {
-    max-width: 100%;
-    height: 70px;
-}
-
-.pagination {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 1rem;
-}
-
-.pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
-    background-color: #6c79db;
-    border: none;
-    border-radius: 1rem;
+    max-width: 90px;
+    max-height: 100%;
+    align-self: right;
 }
 
 @media screen and (min-width: 380px) {
@@ -158,7 +60,7 @@
     }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 800px) {
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
