--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,10 +1,10 @@
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
 
 body {
-    background-color: #f6f8fc;
+    background-color: #e6e6e9;
 }
 
 .content {
