--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,7 +4,13 @@
 }
 
 body {
-    background-color: #f6f8fc;
+    background-color: #04AA6D;
+}
+
+h1 {
+    text-align: center;
+    color: #04AA6D;
+
 }
 
 .content {
@@ -12,7 +18,53 @@ body {
     height: 100vh;
     padding: 1rem;
     background-color: #fff;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
+#search-bar {
+    width: 100%;
+    height: 2.5em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 1em;
+}
+
+#search-btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    color: white;
+    border: none;
+    height: 2.9em;
+    width: 2.9em;
+    border-radius: 49%;
+    border: 1px solid #04AA6D;
+    background-color: #04AA6D;
+    padding: 1em;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    transition: ease-in-out .5s;
+    cursor: pointer;
+}
+
+#search-btn:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    background-color: #049c65;
+    transform:scale(1.15);
+}
+
+
+#search {
+    width: 45%;
+    margin-right: 1em;
+    border-radius: 1em;
+    border: 2px solid #04AA6D;
+}
+
+#search:focus {
+    outline: none;
+}
+
 
 @media screen and (min-width: 992px) {
     .content {
