--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -84,6 +84,12 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    transition: ease-in-out .5s;
+    cursor: pointer;
+}
+
+.pokemon:hover {
+    transform:scale(1.15);
 }
 
 .pokemon .number {
@@ -137,13 +143,18 @@
 }
 
 .pagination button {
-    padding: .25rem .5rem;
+    padding: .3rem .6rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: .725rem;
     color: #fff;
-    background-color: #6c79db;
+    background-color: #04AA6D;
     border: none;
     border-radius: 1rem;
+    transition: ease-in-out .5s;
+}
+
+.pagination button:hover {
+    transform: scale(1.15)
 }
 
 @media screen and (min-width: 380px) {
