Dominando o protocolo HTTP e integrando com a PokeAPI

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,29 +4,21 @@
 }
 
 body {
-    background: linear-gradient(200deg,#f7f8fc, #e3e7f0);
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
+    background-color: #f6f8fc;
 }
 
 .content {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     padding: 1rem;
-    margin: 0;
     background-color: #fff;
 }
 
-
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 992px) {
     .content {
-        max-width: 876px;
+        max-width: 992px;
         height: auto;
         margin: 1rem auto;
         border-radius: 1rem;
     }
 }
-
-
-
