Adição da pagina de detalhes do pokemon

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,22 +3,23 @@
     box-sizing: border-box;
 }
 
-body {
+body{
     background-color: #f6f8fc;
 }
 
-.content {
-    width: 100vw;
+.content{
+    width:100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: white;
 }
 
-@media screen and (min-width: 992px) {
-    .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
+@media screen and (min-width: 992px){
+    .content{
+       max-width: 992px;
+       height: auto;
+       margin: 1rem auto; 
+       border-radius: 1rem;
     }
 }
+
